--- a/mlclash5.ini
+++ b/mlclash5.ini
@@ -25,8 +25,8 @@ custom_proxy_group=🚀 中国代理`select`[]♻️ 国内自动选择`.*
 custom_proxy_group=🎯 科学上网`select`[]♻️ 国外自动选择`.*
 custom_proxy_group=♻️ 国内自动选择`url-test`(国内)`https://connect.rom.miui.com/generate_204`300,1,100
 custom_proxy_group=♻️ 国外自动选择`url-test`(^(?!.*(国内)).*)`http://www.gstatic.com/generate_204`300,5,50
-custom_proxy_group=🛑 全球拦截`select`[]REJECT
-custom_proxy_group=🍃 应用净化`select`[]REJECT
+custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 中国代理`[]🎯 科学上网`.*
 
 enable_rule_generator=true
